--- a/spec/fixtures/vcr_cassettes/synopsis.yml
+++ b/spec/fixtures/vcr_cassettes/synopsis.yml
@@ -101,4 +101,48 @@ http_interactions:
         \       </Point>\r\n      </Placemark>\r\n    </Folder>\r\n  </Document>\r\n</kml>"
     http_version: 
   recorded_at: Fri, 01 Nov 2013 06:22:16 GMT
+# for testing Google API over limit
+- request:
+    method: get
+    uri: http://maps.googleapis.com/maps/api/elevation/xml?locations=36.680248,-120.059121&sensor=true
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/xml; charset=UTF-8
+      Date:
+      - Tue, 05 Nov 2013 04:18:51 GMT
+      Pragma:
+      - no-cache
+      Expires:
+      - Fri, 01 Jan 1990 00:00:00 GMT
+      Cache-Control:
+      - no-cache, must-revalidate
+      Server:
+      - mafe
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - SAMEORIGIN
+      Alternate-Protocol:
+      - 80:quic
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<ElevationResponse>\n
+        <status>OVER_QUERY_LIMIT</status>\n <error_message>You have exceeded your
+        daily request quota for this API.</error_message>\n</ElevationResponse>\n"
+    http_version: 
+  recorded_at: Tue, 05 Nov 2013 04:18:51 GMT
 recorded_with: VCR 2.2.2
